Fixed the comment about the way to set GTEST_ROOT.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(klex)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_subdirectory(src)
 
-# cmake -DGTEST_ROOT=/usr/include/gtest
+# cmake -DGTEST_ROOT:PATH=/usr/include/gtest
 if (DEFINED GTEST_ROOT)
     add_subdirectory(${GTEST_ROOT} ${CMAKE_CURRENT_BINARY_DIR}/gtest)
     add_subdirectory(test)
