--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,4 +13,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-add_library(klex InputStream.cpp)
+add_library(klex
+            InputStream.cpp
+            Utf8Decoder.cpp
+            )
