--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,6 +20,7 @@ include_directories(${klex_SOURCE_DIR}/src
 
 add_executable(klex-unit-tests
                InputStream.t.cpp
+               Utf8Decoder.t.cpp
                )
 
 target_link_libraries(klex-unit-tests
